CLI - GET now has a destination argument instead of downloading to the users home directory only.
GUI Text box size fixes when creating a bucket, running performance tests, migrating accounts, and modifying bucket lifecycle rules.
GUI - When files are deleted, the file listing in object explorer is refreshed.
GUI - Select and Deselect are one toggle button. Issue #18.
GUI - Bucket properties are always visible. Issue #16.
GUI - Bucket properties takes action upon selecting the button. Issue #15.

New Features:

IRC client to chat and save sessions to S3.


Version 4.1

Bug Fixes:
Fixed a bug with the info button to support displaying object information for S3-compatible cloud providers.
Daemon mode now only syncs to S3 to avoid having duplicate files.
 
Improvements:
Performance Testing: Graph and non-graph display are labeled as PUT or GET.
Versioning: Latest file will be in blue. Deleted files will be in red.
Versioning: Version enabled buckets will be displayed in green.
Upgraded S3 API to 1.9.3
GUI creates and deletes buckets in a background thread to be more responsive.

New Features:
Command-line interface: put, get, delete, makebucket, rmbucket, listbuckets, syncfroms3, and synctos3.
Performance testing available from the command-line

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command-line interface.
15. IRC client that allows you to save chat sessions to S3.


Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket destination
java -jar CloudExplorer.jar delete filename bucket 
