@@ -14,9 +14,9 @@
  * cloudExplorer
  *
  */
-
 package cloudExplorer;
 
+import static cloudExplorer.NewJFrame.jButton7;
 import static cloudExplorer.NewJFrame.jTextArea1;
 
 public class ObjectProperties implements Runnable {
@@ -33,10 +33,17 @@ public class ObjectProperties implements Runnable {
             for (int i = 1; i != mainFrame.previous_objectarray_length; i++) {
 
                 if (mainFrame.object_item[i].isSelected()) {
-                    jTextArea1.setText("\nFile Name: " + mainFrame.object_item[i].getText());
-                    jTextArea1.append("\nSize: " + mainFrame.bucket.getObjectInfo(mainFrame.object_item[i].getText(), mainFrame.cred.getAccess_key(), mainFrame.cred.getSecret_key(), mainFrame.bucket_item[mainFrame.active_bucket].getText(), mainFrame.cred.getEndpoint(), "objectsize") + " Bytes");
-                    jTextArea1.append("\nModified Date: " + mainFrame.bucket.getObjectInfo(mainFrame.object_item[i].getText(), mainFrame.cred.getAccess_key(), mainFrame.cred.getSecret_key(), mainFrame.bucket_item[mainFrame.active_bucket].getText(), mainFrame.cred.getEndpoint(), "objectdate"));
-                    break;
+                    mainFrame.object_item[i].setText(mainFrame.object_item[i].getText() + "   File Size: " + mainFrame.bucket.getObjectInfo(mainFrame.object_item[i].getText(), mainFrame.cred.getAccess_key(), mainFrame.cred.getSecret_key(), mainFrame.bucket_item[mainFrame.active_bucket].getText(), mainFrame.cred.getEndpoint(), "objectsize") + " Bytes"
+                            + "   Modified Date: " + mainFrame.bucket.getObjectInfo(mainFrame.object_item[i].getText(), mainFrame.cred.getAccess_key(), mainFrame.cred.getSecret_key(), mainFrame.bucket_item[mainFrame.active_bucket].getText(), mainFrame.cred.getEndpoint(), "objectdate"));
+                    mainFrame.jButton1.setEnabled(false);
+                    mainFrame.jButton3.setEnabled(false);
+                    mainFrame.jButton4.setEnabled(false);
+                    mainFrame.jButton7.setEnabled(false);
+                    mainFrame.jButton12.setEnabled(false);
+                    mainFrame.jButton13.setEnabled(false);
+                    mainFrame.jButton17.setEnabled(false);
+                    mainFrame.jButton18.setEnabled(false);
+                    mainFrame.jButton19.setEnabled(false);
                 }
             }
         } catch (Exception ObjectACL) {
